--- a/Shopping Card/style.css
+++ b/Shopping Card/style.css
@@ -23,6 +23,7 @@ body {
   background-color: #2f3e46;
   color: white;
   padding: 25px 60px;
+  margin-bottom: 30px;
 }
 
 /**
@@ -47,4 +48,59 @@ body {
   color: white;
   padding: 3px;
   border-radius: 3px;
+}
+
+/**
+* ! Shop items styles are here
+**/
+
+.shop {
+  display: grid;
+  grid-template-columns: repeat(4, 223px);
+  gap: 30px;
+  justify-content: center;
+}
+
+@media (max-width: 1000px) {
+  .shop {
+    grid-template-columns: repeat(2, 223px);
+  }
+}
+
+@media (max-width: 500px) {
+  .shop {
+    grid-template-columns: repeat(1, 223px);
+  }
+}
+
+.item {
+  border: 2px solid #000;
+  border-radius: 4px;
+}
+
+.details {
+  display: flex;
+  flex-direction: column;
+  padding: 10px;
+  gap: 10px;
+}
+
+.price-quantitiy {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.buttons {
+  display: flex;
+  gap: 8px;
+  font-size: 18px;
+}
+
+.bi-dash-lg {
+  color: red;
+}
+
+.bi-dash-bg {
+  color: green;
 }
