--- a/Shopping Card/src/style.css
+++ b/Shopping Card/src/style.css
@@ -12,6 +12,15 @@ body {
   font-family: sans-serif;
 }
 
+i {
+  cursor: pointer;
+}
+
+a {
+  text-decoration: none;
+  color: #fff;
+}
+
 /**
 * ! Navbar styles are here
 **/
@@ -99,10 +108,78 @@ body {
 
 .bi-dash-lg {
   color: red;
-  cursor: pointer;
 }
 
 .bi-plus-lg {
   color: green;
+}
+
+.bi-bag {
+  color: #52796f;
+  font-size: 1.5rem;
+}
+
+/**
+* ! style rules for label and some buttons
+**/
+
+.text-center {
+  text-align: center;
+  margin-bottom: 20px;
+}
+
+.HomeBtn {
+  background-color: #212529;
+  color: white;
+  border: none;
+  padding: 6px;
+  border-radius: 3px;
   cursor: pointer;
+  margin-top: 10px;
+}
+
+.bi-x-lg {
+  color: red;
+  font-weight: bold;
+}
+
+/**
+* ! style rules for shopping cart
+**/
+
+.shopping-cart {
+  display: grid;
+  grid-template-columns: repeat(1, 320px);
+  justify-content: center;
+  gap: 15px;
+}
+
+/**
+* ! style rules for cart item
+**/
+
+.card-item {
+  border: 2px solid #212529;
+  border-radius: 5px;
+  display: flex;
+}
+
+.title-price-x {
+  width: 195px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.title-price {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
+
+.cart-item-price {
+  background-color: #212529;
+  color: white;
+  padding: 3px 6px;
+  border-radius: 4px;
 }
