--- a/Shopping Card/src/style.css
+++ b/Shopping Card/src/style.css
@@ -128,7 +128,9 @@ a {
   margin-bottom: 20px;
 }
 
-.HomeBtn {
+.HomeBtn,
+.checkout,
+.removeAll {
   background-color: #212529;
   color: white;
   border: none;
@@ -136,6 +138,14 @@ a {
   border-radius: 3px;
   cursor: pointer;
   margin-top: 10px;
+}
+
+.checkout {
+  background-color: green;
+}
+
+.removeAll {
+  background-color: red;
 }
 
 .bi-x-lg {
