--- a/Shopping Card/src/style.css
+++ b/Shopping Card/src/style.css
@@ -29,6 +29,7 @@ a {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+  align-items: center;
   background-color: #2f3e46;
   color: white;
   padding: 25px 60px;
