TODO app javascript

--- a/Todo app - CRUD/TODO App/style.css
+++ b/Todo app - CRUD/TODO App/style.css
@@ -16,7 +16,8 @@ body {
   border-radius: 4px;
   padding: 15px;
   background-color: #fff;
-  overflow-y: scroll hidden;
+  overflow-y: scroll;
+  scrollbar-width: none;
 }
 
 .app::-webkit-scrollbar {
