--- a/Typing game/style.css
+++ b/Typing game/style.css
@@ -64,10 +64,39 @@ div#game {
   line-height: 35px;
   height: 105px;
   overflow: hidden;
+  position: relative;
 }
 
 div.word {
   display: inline-block;
   font-family: "Roboto Mono", monospace;
   margin: 0 5px;
+}
+
+#words {
+  filter: blur(5px);
+  color: var(--textSecondary);
+}
+
+#game:focus #words {
+  filter: blur(0);
+}
+
+#focus-error {
+  position: absolute;
+  inset: 0;
+  text-align: center;
+  padding-top: 35px;
+}
+
+#game:focus #focus-error {
+  display: none;
+}
+
+.letter.correct {
+  color: #fff;
+}
+
+.letter.incorrect {
+  color: #f55;
 }
