--- a/Typing game/style.css
+++ b/Typing game/style.css
@@ -130,3 +130,19 @@ div.word {
 #game:focus #cursor {
   display: block;
 }
+
+#game.over {
+}
+
+#game.over #words {
+  opacity: 0.5;
+  filter: blur(0px);
+}
+
+#game.over:focus #cursor {
+  display: none;
+}
+
+#game.over #focus-error {
+  display: none;
+}
