--- a/Memory card game/style.css
+++ b/Memory card game/style.css
@@ -33,6 +33,10 @@ body {
   transition: transform 0.2s;
 }
 
+.memory-card.flip {
+  transform: rotateY(180deg);
+}
+
 .front-face,
 .back-face {
   width: 100%;
