--- a/Typing game/style.css
+++ b/Typing game/style.css
@@ -6,3 +6,109 @@
   box-sizing: border-box;
   font-family: "Poppins", sans-serif;
 }
+
+body {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  min-height: 100vh;
+  background: #62cf7f;
+}
+
+.wrapper {
+  width: 770px;
+  padding: 35px;
+  background: #fff;
+  border-radius: 10px;
+}
+
+.wrapper .content-box {
+  padding: 13px 20px 0;
+  border-radius: 10px;
+  border: 1px solid #ccc;
+}
+
+.content-box .typing-text {
+  max-height: 255px;
+  overflow-y: auto;
+  -ms-overflow-style: none;
+}
+
+.typing-text {
+  overflow: auto;
+  -ms-overflow-style: none; /* IE 11 */
+  scrollbar-width: none; /* Firefox 64 */
+}
+
+.typing-text::-webkit-scrollbar {
+  width: 0;
+}
+
+.typing-text p {
+  font-size: 24px;
+  text-align: justify;
+  letter-spacing: 1px;
+  word-break: break-all;
+}
+
+.content-box .content {
+  display: flex;
+  margin-top: 17px;
+  padding: 12px 0;
+  align-items: center;
+  border-top: 1px solid #ccc;
+  justify-content: space-between;
+}
+
+.content button {
+  border: none;
+  outline: none;
+  width: 105px;
+  padding: 8px 0;
+  color: #fff;
+  cursor: pointer;
+  font-size: 16px;
+  border-radius: 5px;
+  background: #e4b11c;
+  transition: transform 0.3s ease;
+}
+
+.content button:active {
+  transform: scale(0.97);
+}
+
+.content .result-details {
+  display: flex;
+  width: calc(100% - 140px);
+  justify-content: space-between;
+  align-items: center;
+}
+
+.result-details li {
+  height: 22px;
+  display: flex;
+  list-style: none;
+}
+
+.result-details li:not(:first-child) {
+  padding-left: 22px;
+  border-left: 1px solid #ccc;
+}
+
+.result-details li p {
+  font-size: 19px;
+}
+
+.result-details li span {
+  display: block;
+  font-size: 20px;
+  margin-left: 10px;
+}
+
+.result-details li:not(:first-child) span {
+  font-weight: 500;
+}
+
+.result-details li b {
+  font-weight: 900;
+}
