Cheking user typed char adn the shown char

--- a/Typing game/style.css
+++ b/Typing game/style.css
@@ -51,6 +51,17 @@ body {
   word-break: break-all;
 }
 
+.typing-text p span.correct {
+  color: #56964f;
+}
+
+.typing-text p span.incorrect {
+  color: #cb3439;
+  background: #ffc0cb;
+  outline: 1px solid #fff;
+  border-radius: 4px;
+}
+
 .content-box .content {
   display: flex;
   margin-top: 17px;
