--- a/Typing game/style.css
+++ b/Typing game/style.css
@@ -51,15 +51,37 @@ body {
   word-break: break-all;
 }
 
+.typing-text p span {
+  position: relative;
+}
 .typing-text p span.correct {
   color: #56964f;
 }
-
 .typing-text p span.incorrect {
   color: #cb3439;
-  background: #ffc0cb;
   outline: 1px solid #fff;
+  background: #ffc0cb;
   border-radius: 4px;
+}
+.typing-text p span.active {
+  color: #17a2b8;
+}
+.typing-text p span.active::before {
+  position: absolute;
+  content: "";
+  height: 2px;
+  width: 100%;
+  bottom: 0;
+  left: 0;
+  opacity: 0;
+  border-radius: 5px;
+  background: #17a2b8;
+  animation: blink 1s ease-in-out infinite;
+}
+@keyframes blink {
+  50% {
+    opacity: 1;
+  }
 }
 
 .content-box .content {
