Call To Action Banners

--- a/Ecommerce/style.css
+++ b/Ecommerce/style.css
@@ -53,12 +53,24 @@ font-size: 14px;
 font-weight: 600;
 padding: 15px 30px;
 color: #000;
-background: #fff;
+background-color: #fff;
 border-radius: 4px;
 cursor: pointer;
 border: none;
 outline: none;
 transition: 0.2s;
+}
+
+button.white {
+  font-size: 13px;
+  font-weight: 600;
+  padding: 11px 18px;
+  /* color: #fff; */
+  background-color: trasparent; 
+  cursor: pointer;
+  border: 1px solid #fff;
+  outline: none;
+  transition: 0.2s;
 }
 
 body {
@@ -312,4 +324,53 @@ body {
 #banner button:hover {
   background-color: #088178;
   color: #fff;
+}
+
+#sm-banner {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+}
+
+#sm-banner .banner-box {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+  background-image: url("img/banner/b17.jpg");
+  min-width: 580px;
+  height: 50vh;
+  background-size: cover;
+  background-position: center;
+  padding: 30px;
+}
+
+
+#sm-banner .banner-box2 {
+  background-image: url("img/banner/b10.jpg")
+}
+
+#sm-banner h4 {
+  color: #fff;
+  font-size: 20px;
+  font-weight: 300;
+}
+
+#sm-banner h2 {
+  color: #fff;
+  font-size: 28px;
+  font-weight: 800;
+}
+
+#sm-banner span {
+  color: #fff;
+  font-size: 14px;
+  font-weight: 500;
+  padding-botton: 15px;
+}
+
+#sm-banner .banner-box:hover button{
+  color: #fff;
+  background: #088178;
+  border: 1px solid #088178;
 }
