--- a/Ecommerce/style.css
+++ b/Ecommerce/style.css
@@ -374,3 +374,44 @@ body {
   background: #088178;
   border: 1px solid #088178;
 }
+
+#banners3 {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  padding: 0 80px;
+}
+
+#banners3 .banner-box {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+  background-image: url("img/banner/b7.jpg");
+  min-width: 30%;
+  height: 30vh;
+  background-size: cover;
+  background-position: center;
+  padding: 20px;
+  margin-bottom: 20px;
+}
+
+#banners3 .banner-box2 {
+  background-image: url("img/banner/b4.jpg");
+}
+
+#banners3 .banner-box3 {
+  background-image: url("img/banner/b1.jpg");
+}
+
+#banners3 h2 {
+  color: #fff;
+  font-weight: 900;
+  font-size: 22px;
+}
+
+#banners3 h3 {
+  color: #ec544e;
+  font-weight: 800;
+  font-size: 15px;
+}
