--- a/Ecommerce/style.css
+++ b/Ecommerce/style.css
@@ -633,3 +633,71 @@ footer .copyright {
     width: 70%;
   }
 }
+
+@media (max-width: 477px) {
+  .section-p1 {
+    padding: 20px;
+  }
+
+  #header {
+    padding: 10px 30px;
+ } 
+
+ h2 {
+  font-size: 32px;
+ }
+
+ h1 {
+  font-size: 38px;
+ }
+
+ #hero {
+  padding: 0 20px;
+  background-position: 55%;
+ }
+
+ #feature .fe-box {
+  width: 155px;
+  margin: 0 0 15px 0;
+ }
+
+ #feature {
+  justify-content: space-between;
+ }
+
+ #product1 .pro {
+  width: 100%;
+ }
+
+ #banner {
+  height: 40vh;
+ }
+
+ #sm-banner .banner-box {
+  height: 40vh;
+ }
+
+ #sm-banner .banner-box2 {
+  margin-top: 20px;
+ }
+
+ #banners3 {
+  padding: 0 20px;
+ }
+
+ #banners3 .banner-box {
+  width: 100%;
+ }
+
+ #newsletter .form {
+  width: 100%;
+ }
+
+ #newsletter {
+  padding: 40px 20px;
+ }
+
+ footer .copyright {
+  text-align: start;
+ }
+}
